--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,12 +1,21 @@
 <ion-view view-title="Biologia">
   <ion-content class="padding">
-    <h1>Importacia del Agua</h1>
-    <h5>El agua es el elemento más importante para la vida. Es de una importancia vital para el ser humano, así como para el resto de animales y seres vivos que nos acompañan en el planeta Tierra.
+    <ion-grid>
+    	<ion-row>
+    		<ion-col>
+    			<h1>Importacia del Agua</h1>
+    	<h5>El agua es el elemento más importante para la vida. Es de una importancia vital para el ser humano, así como para el resto de animales y seres vivos que nos acompañan en el planeta Tierra.
 
-Resulta curioso que el 70 por ciento de la Tierra sea agua y que el 70 por ciento de nuestro cuerpo también sea agua. Quizás sea por eso que lo recomendable para tener una dieta saludable y una larga vida sea el comer alimentos con un porcentaje del 70 por ciento en agua.</h5>
-    <br>
-    <br>
-    <br>
-    <center><iframe width="350" height="300" src="https://www.youtube.com/embed/7UHFvyhKIXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		Resulta curioso que el 70 por ciento de la Tierra sea agua y que el 70 por ciento de nuestro cuerpo también sea agua. Quizás sea por eso que lo recomendable para tener una dieta saludable y una larga vida sea el comer alimentos con un porcentaje del 70 por ciento en agua.</h5>
+  			</ion-col>
+  		</ion-row>
+  		<ion-row>
+  			<ion-col>
+  				<br>
+  				<br>
+  				<center><iframe width="350" height="300" src="https://www.youtube.com/embed/7UHFvyhKIXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+  			</ion-col>
+  		</ion-row>
+  	</ion-grid>
   </ion-content>
 </ion-view>
