--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,8 +12,8 @@
 	background-color: rgba(0,0,0,.5);
 }
 
-ion-content{
-	background-image: url(http://www.4usky.com/data/out/11/164067329-biology-wallpapers.jpg);
+ion-view{
+	background-image: url(http://www.bruna.cat/imgdownload/full/6/69263/anime-desktop-wallpaper-hd.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 }
