--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,23 @@
-<ion-view view-title="Account">
-  <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
+<ion-view view-title="Infografias">
+  <ion-content class="padding">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 class="tex">Infografias</h1>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <center><img height="270" width="270" src="img/info1.jpg"></center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <center><img height="350" width="250" src="img/info2.png"></center>
+        </div>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
