--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,16 +1,32 @@
-<ion-view view-title="Chats">
+<ion-view view-title="ADN 3D">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 class="tex">ADN</h1>
+          <h5 class="texw">El ácido desoxirribonucleico, abreviado como ADN, siempre es un ácido nucleico que contiene las instrucciones genéticas usadas en el desarrollo y funcionamiento de todos los organismos vivos y algunos virus; también es responsable de la transmisión hereditaria.</h5>
+        </div>
+      </div>
+    </div>
+    <!--ADN-->
+    <div class="container">
+      <div class="row">
+        <div class="col col-25"></div>
+          <div class="col col-50">        
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          <div class="dna"></div>
+          </div>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
