--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Video">
+<ion-view view-title="Videos">
   <ion-content class="padding">
     <div class="container">
       <div class="row">
@@ -15,8 +15,29 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <center><iframe width="280" height="180" src="https://www.youtube.com/embed/7UHFvyhKIXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+          <center><iframe width="560" height="315" src="https://www.youtube.com/embed/7UHFvyhKIXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         </div>   
+      </div>
+    </div>
+    <!--FECUNDACION-->
+    <br>
+    <br>
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <br>
+          <h1 class="tex">Fecundación y Metodos Anticonceptivos</h1>
+          <h5 class="texw">La fecundación, es el proceso por el cual dos gametos se fusionan durante la reproducción sexual para crear un nuevo individuo con un genoma derivado de ambos progenitores. La anticoncepción, contracepción o control de la natalidad es cualquier método o dispositivo para prevenir el embarazo.​ La planificación, provisión y uso de métodos anticonceptivos es llamado planificación familiar.​​</h5>
+        </div>
+      </div>
+    </div>
+    <!--Video 2-->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <center><iframe width="560" height="315" src="https://www.youtube.com/embed/m8U2l1FI3X0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        </div>
       </div>
     </div>
 
