--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,10 +3,10 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-calm">
+<ion-tabs class="tabs-icon-top tabs-background-dark tabs-color-light">
 
   <!-- video Tab -->
-  <ion-tab title="Video" icon-off="ion-videocamera" icon-on="ion-videocamera" href="#/tab/dash">
+  <ion-tab title="Videos" icon-off="ion-videocamera" icon-on="ion-videocamera" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
@@ -26,7 +26,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- juego Tab -->
-  <ion-tab title="Juego" icon-off="ion-trophy" icon-on="ion-trophy" href="#/tab/game">
+  <ion-tab title="Juego" icon-off="ion-game-controller-b" icon-on="ion-game-controller-b" href="#/tab/game">
     <ion-nav-view name="tab-game"></ion-nav-view>
   </ion-tab>
 
