--- a/www/templates/tab-game.html
+++ b/www/templates/tab-game.html
@@ -7,104 +7,25 @@
         </div>
       </div>
     </div>
+    <hr>
     <!--juego-->
-    <div class="contas">
-    	<div class="row">
-    		<div class="col">
-    <section class="score-panel">
-        <button class="btn restart">
-            <i class="fa fa-repeat"></i>
-        </button>
-        <div class="current-rate">
-            <div class="counter"></div>
-            <span>Vueltas=</span><span class="moves">0</span>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div id="picbox">
+                    <span id="boxbuttons">
+                        <span class="button">
+                            <span id="counter">0</span>
+                            Movimientos
+                        </span>
+                        <span class="button" ng-click="ResetGame()">
+                            Reiniciar
+                        </span> 
+                    </span>
+                        <center><div id="boxcard"></div></center>
+                </div>
+            </div>
         </div>
-        <div>=</div>
-        <div class="counter">
-            <span>Tiempo <i class="fa fa-hourglass-half" title="Time"></i>
-            </span><span class="displayTime">00:00</span>
-        </div>
-
-        <button class="btn ratings">Rating</button>
-
-    </section>
-
-    <ul class="deck" id="card-deck">
-        <li class="card">
-            <i class="fa fa-diamond"></i> 
-        </li>
-        <li class="card">
-            <i class="fa fa-paper-plane-o"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-anchor"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-bolt"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-cube"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-anchor"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-leaf"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-bicycle"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-diamond"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-bomb"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-leaf"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-bomb"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-bolt"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-bicycle"></i>
-        </li>
-        <li class="card">
-            <i class="fa fa-paper-plane-o"></i>
-        </li>
-        <li class="card">
-
-            <i class="fa fa-cube"></i>
-        </li>
-    </ul>
-    <!--panel that will be show when you finish the game-->
-    <section class="pop-up hide">
-        <div class="result">
-            <h2><span class="pop-up-header">FELICIDADES!</span></h2>
-            <p>You needed <span id="fin-moves">0</span> Movimientos al final</p>
-            <p>Tu Tiempo<span id="fin-time">00.00</span>.</p>
-            <p class="fin-stars">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-            </p>
-            <img class="fireworks" src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/mail-256.png" alt="fireworks">
-            <img class="cup cup-bronze hide" src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/mail-256.png" alt="cup-bronze">
-            <img class="cup cup-silver hide" src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/mail-256.png" alt="cup-silver">
-            <img class="cup cup-gold hide" src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/mail-256.png" alt="cup-gold">
-            <p>Score: <span id="fin-score"></span></p>
-            <form class="print-your-name">
-                <input id="input-name" type="text" placeholder="Escribe tu Nombre">
-                <input id="btn-submit" class="btn" type="submit" value="Submit!">
-            </form>
-        </div>
-
-    </section>
-		</div>
-	</div>
-</div>
+    </div>
   </ion-content>
 </ion-view>
