--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,16 +1,15 @@
 /* Empty. Add your own CSS if you like */
 .tex{
 	text-align: center;
-	font-size: 60px;
+	font-size: 45px;
 	font-family: impact;
-	-webkit-text-fill-color: #FFEA00;
-	-webkit-text-stroke: 2px black;
+  color:#FFD800;
 }
 
 .texw{
 	color:#fff;
 	background-color: rgba(0,0,0,.5);
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .centu{
@@ -19,7 +18,7 @@
 }
 
 ion-view{
-	background-image: url(http://hd-wallpapersfd.info/wp-content/uploads/HTML/Outer-Space-Backgrounds/Outer-Space-Backgrounds74.jpg);
+	background-image:url(http://hd-wallpapersfd.info/wp-content/uploads/HTML/Outer-Space-Backgrounds/Outer-Space-Backgrounds74.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -382,11 +381,10 @@ ion-view{
   margin: 2px 0 0;
 }
 #boxcard div{
-  display: inline-table;
-  float: center;
+  float: left;
   width: 100px;
   height: 100px;
-  margin: 5px;
+  margin: 3.2px;
   padding: 5px;
   border: 4px solid orange;
   cursor: pointer;
