--- a/www/templates/tab-game.html
+++ b/www/templates/tab-game.html
@@ -4,6 +4,7 @@
       <div class="row">
         <div class="col">
           <h1 class="tex">BioMemoria</h1>
+          <center><h5 class="texw">Juega y Diviertete</h5></center>
         </div>
       </div>
     </div>
@@ -12,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div id="picbox">
+                <center><div id="picbox"></center>
                     <span id="boxbuttons">
                         <span class="button">
                             <span id="counter">0</span>
