--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-background-positive tabs-color-dark">
+<ion-tabs class="tabs-icon-top tabs-background-royal tabs-color-dark">
 
   <!-- video Tab -->
   <ion-tab title="Videos" icon-off="ion-videocamera" icon-on="ion-videocamera" href="#/tab/dash">
